views/assets/src/helpers/less/customization/pm-task-list.less
/* ... */
.pm-complete-milestone span.group-title i {
    width: 30px;
    height: 30px;
    background: #97DCBE;
    border-radius: 50%;
    color: #848484;
    padding: 2px;
    font-size: 14px;
    margin-right: 10px;
}
.pm-milestone-data .group-title .bb-icon-flag {
    color: var(--bb-headings-color);
    margin-right: 10px;
}
.pm-kanboard .kanboard-menu-wrap{
    display: none!important;
}

/*Kanban board customizations*/
.kbc-action-icon-wrap i {
    font-size: 16px;
}

.kbc-section-header-wrap .kbc-section-action.kbc-non-sortable {
    padding-right: 0;
}

.kbc-action-icon-wrap a.pm-pro-kanboard-action-hrf.pm-pro-kanboard-del-btn {
    padding-right: 0;
}

.kbc-kanboard .kbc-table-wrap .kbc-th-wrap .kbc-th .kbc-section-background .kbc-tasks-add-task span a {
    font-size: 12px!important;
    font-weight: 500!important;
}

.kbc-kanboard .kbc-table-wrap .kbc-th-wrap .kbc-th .kbc-section-background .kbc-tasks-add-task span a i {
    font-size: 15px;
}

.kbc-kanboard .kbc-table-wrap .kbc-th-wrap .kbc-th .kbc-section-background .kbc-section-header-wrap .kbc-section-header .kbc-section-title span {
    font-weight: 500!important;
}

.kbc-kanboard .kbc-table-wrap .kbc-th-wrap .kbc-th .kbc-section-background .kbc-tasks-wrap .kbc-kanboard-sortable-wrap .kbc-td-contents .kbc-content-inside .kbc-after-task-title-wrap {
    margin-top: 15px;
}

.kbc-kanboard .kbc-table-wrap .kbc-th-wrap .kbc-th .kbc-td-contents .kbc-content-inside .kbc-after-task-title-wrap .cpm-assigned-user img {
    width: 19px;
    height: 19px;
}

.kbc-task-user-wrap .cpm-assigned-user:not(:first-child) {
    margin-left: -7px;
}

.kbc-kanboard .kbc-table-wrap .kbc-th-wrap .kbc-th .kbc-section-background .kbc-tasks-wrap .kbc-kanboard-sortable-wrap .kbc-td-contents .kbc-content-inside .kbc-after-task-title-wrap .kbc-task-date-wrap span {
    font-size: 12px;
    margin-left: 5px;
}
.kbc-th .kbc-section-header .kbc-sections-add-section i {
    font-size: 16px;
}

.kbc-th .kbc-section-header .kbc-sections-add-section a {
    font-weight: 500!important;
    font-size: 16px;
}
.kbc-kanboard .kbc-table-wrap .kbc-th-wrap .kbc-th .kbc-kanboard-sortable-wrap {
    min-height: 20px;
}

